# pycliques-project

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: Makefile  conf.py  index.rst
docs/api/: index.rst  pycliques.rst  pycombtop.rst  pyg6data.rst  pyhomrep.rst
